--- a/index.css
+++ b/index.css
@@ -102,3 +102,33 @@ body {
     filter: brightness(1.2);
     cursor: context-menu;
 }
+
+.dt-paging-button {
+    background-color: #f05a28 !important;
+    font-family: 'Courier New', Courier, monospace;
+    border: 3px solid orangered !important;
+}
+.dt-paging-button:hover {
+    /* background-color: #f05a28 !important; */
+    filter: brightness(1.3) !important;
+    background: none !important;
+}
+
+.dt-paging-button.disabled {
+    background-color: gray !important;
+    border: 3px solid rgb(70, 70, 70) !important;
+}
+.dt-paging-button.disabled:hover {
+    background-color: gray !important;
+    filter: brightness(1.0) !important;
+}
+
+.dt-paging-button.current {
+    background-color: rgb(43, 43, 43) !important;
+    filter: brightness(1.4) !important;
+}
+.dt-paging-button.current:hover {
+    background-color: rgb(43, 43, 43) !important;
+    filter: brightness(1.8) !important;
+}
+
